added /playerdata & cleanup

--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -3,6 +3,9 @@ version: "1.0"
 author: "lord steve"
 main: com.steve.Main
 commands:
+  playerdata:
+    description: modify playerdata manually
+    usage: /<command>
   spawnplatform:
     description: ok
     usage: /<command>
