--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -15,3 +15,6 @@ commands:
   friend:
     description: friend parent command
     usage: /<command>
+  tnthelmet:
+    description: boom
+    usage: /<command>
