fake blocks incl. animation (to test)

--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -18,3 +18,12 @@ commands:
   tnthelmet:
     description: boom
     usage: /<command>
+  test1:
+    description: test
+    usage :/<command>
+  test2:
+    description: test
+    usage :/<command>
+  test3:
+    description: test
+    usage :/<command>
